<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:foo="http://schemas.android.com/tools"
    android:background="@android:color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <com.uncommontrade.e2b.customview.WrapContentViewPager xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/pager_item_product_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" />

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/indicator_item_product_detail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:padding="10dip"
            app:centered="true" />
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.uncommontrade.e2b.customview.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                foo:customFont="fonts/Lato-Bold"
                android:textSize="25sp"
                android:textColor="@color/bgTabBottom"
                android:id="@+id/txt_item_detail_name" />

            <com.uncommontrade.e2b.customview.TextViewPlus
                android:layout_width="wrap_content"
                foo:customFont="fonts/Lato-Light"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:textSize="22sp"
                android:textColor="@color/textDetail"
                android:id="@+id/txt_item_detail_Description" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <com.uncommontrade.e2b.customview.TextViewPlus
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                foo:customFont="fonts/Lato-Light"
                android:textColor="@color/textDetail"
                android:layout_marginRight="20dp"
                android:id="@+id/txt_item_detail_price" />
        </LinearLayout>
    </LinearLayout>

    <com.uncommontrade.e2b.customview.TextViewPlus
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        foo:customFont="fonts/Lato-Regular"
        android:layout_margin="10dp"
        android:id="@+id/txt_item_detail_sku" />
    <View
        android:id="@+id/view_item_detail_attribute"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="0.5dp"
        android:background="@color/line" />
    <LinearLayout
        android:id="@+id/llayout_item_detail_attribute"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/llayout_item_detail_attribute_name"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <com.uncommontrade.e2b.customview.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Color \/ Material"
                foo:customFont="fonts/Lato-Regular"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center|left"
                android:id="@+id/txt_item_detail_attributes" />
            <com.uncommontrade.e2b.customview.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ZZZZZ"
                foo:customFont="fonts/Lato-Regular"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_18dp"
                android:id="@+id/txt_item_detail_attributes_value" />
        </LinearLayout>


        <View
            android:layout_width="0.5dp"
            android:background="@color/line"
            android:layout_height="45dp"/>
        <LinearLayout
            android:id="@+id/llayout_item_detail_attribute_qty"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <com.uncommontrade.e2b.customview.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/qty"
                foo:customFont="fonts/Lato-Regular"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical|left" />
            <com.uncommontrade.e2b.customview.TextViewPlus
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="New Text"
                foo:customFont="fonts/Lato-Regular"
                android:padding="5dp"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_18dp"
                android:id="@+id/txt_item_detail_qty" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_cart"
        android:textColor="@android:color/white"
        android:background="@color/yellow"
        android:id="@+id/btn_item_detail_add_to_cart" />

    <LinearLayout
        android:id="@+id/llayout_product_detail_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <com.uncommontrade.e2b.customview.TextViewPlus
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            foo:customFont="fonts/Lato-Regular"
            android:layout_gravity="center"
            android:textColor="@color/bgTabBottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/reviews" />

        <RatingBar
            android:id="@+id/rat_item_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:layout_marginRight="20dp"
            android:stepSize="0.1"
            android:isIndicator="true"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal">

        <com.uncommontrade.e2b.customview.TextViewPlus
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            foo:customFont="fonts/Lato-Regular"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textColor="@color/bgTabBottom"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:text="@string/related_items" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line" />
</LinearLayout>